Changed string and properties

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Tms.Shop;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:tms-shop-backend-db-server.database.windows.net,1433;Initial Catalog=tms-shop-backend-db;Persist Security Info=False;User ID=stpntkhnv;Password=QWEqwe1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
